Add empty placeholder for passphrase generator

--- a/src/app/vault/password-generator.component.html
+++ b/src/app/vault/password-generator.component.html
@@ -46,7 +46,7 @@
                         <div class="box-content-row box-content-row-input" appBoxRow>
                             <label for="word-separator">{{'wordSeparator' | i18n}}</label>
                             <input id="word-separator" type="text" maxlength="1" (input)="saveOptions()"
-                                [(ngModel)]="options.wordSeparator">
+                                [(ngModel)]="options.wordSeparator" placeholder="{{'emptySeparator' | i18n}}">
                         </div>
                         <div class="box-content-row box-content-row-checkbox" appBoxRow>
                             <label for="capitalize">{{'capitalize' | i18n}}</label>
